[package]
name = "xpx-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1"
# serde = "1"
serde = { version = "1.0", features = ["derive"] }
serial_test = "0"
wasm-bindgen = "0.2"
bincode = "1.3.3"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "sdk"
path = "src/lib.rs"
